Add SEO metadata to head section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe Website</title>
         <meta name="descrition"conent="Explore a new cafe">
+         <meta name="description" content="Welcome to Cool Cafe - a cozy cafe offering fresh coffee, delicious pastries, and a warm atmosphere in the city.">
+    <meta name="keywords" content="Cool Cafe, Coffee, Pastries, Matcha, Americano, Cozy Cafe, City Cafe">
+    <meta name="author" content="Cool Cafe Team">
 </head>
 <body>
     <header>
