Added a paragraph in the second section of the file

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ Whether you're here to catch up with friends, work remotely, or simply enjoy a q
     <section id="menu">
     <h2>MENU</h2>
     <h3>Drinks</h3>
+    <p>Our drinks are freshly made and squeezed using organic natural fruits handpicked from our farm.</p>
     <nav>
     
     </nav>
