Added navigation to the footer of the file

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@ Whether you're here to catch up with friends, work remotely, or simply enjoy a q
     </section>
 </main>
 <footer>
-    
+    <nav>
     <p> 2025 Cool Cafe All rights reserved</p>
-    
+    </nav>
 </footer>
 </body>
 </html>
